welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:5: error: not found: type YELLOW
def faireV(c: YELLOW) {
              ^MethodsPicture:24: error: not found: type YELLOW
faireV(c: YELLOW)
          ^MethodsPicture:24: error: not found: value c
faireV(c: YELLOW)
       ^